# PKC

./: .env  .env.example  .env.production.example  .gitignore  .gitmodules  Agents.md  Dockerfile  FORK_SYNC_SETUP.md  PRD.md  README.md  astro.config.mjs  bmad_config.yaml  delete-all-cards.sh  docker-compose.yml  docker-entrypoint.sh  exmaple.env  iot_telegram.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  rewrite.js  rules.md  tailwind.config.js  tailwind.config.mjs  telegram_bot.py  tes.txt  test_auth_config.sh  test_mp3_upload.cjs  test_mp3_upload.js  testing.js  tsconfig.json
.bmad-core/: install-manifest.yaml
.github/workflows/: deploy.yml  notify-forks.yml  (+2 more)
Docs/: Authentik-Integration.md  Components Documentation.md  Cross Entropy and PCard.md  Debounced-Search-Pattern.md  Docker-rules.md  Langfuse Script.md  MCard.md  MVP Cards for PKC.md  PCard Architecture.md  PCard.md  PKC.md  PKC_Ecosystem.md  Polynomial Representation of Categorical Structures.md  Redux-State-Management.md  TBD.md  VCard.md  VCard_Impl.md  flux2flow_state-management.md  user-manual.md
docs/: Agents.md  PKC Introduction.md  PKC.md
playwright-tests/: PKC_test.spec copy 2.js  PKC_test.spec copy 3.js  PKC_test.spec copy.js  PKC_test.spec.js  RAG_test.spec.js  docker-compose.yml
public/: manifest.json  manifest.webmanifest  runtime-env.js  runtime-env.json  sw.js
scripts/: fetch-render-libs.js  generate-icons.js  generate-runtime-env.cjs  generate-runtime-env.js  langfuse_ollama.py
src/: config.ts  env.d.ts  runtime-env.js
test-results/: .last-run.json
(+209 files in other folders)
